fixed findbug warning: Integer was not parsed using String.valueOf
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@930811 13f79535-47bb-0310-9956-ffa450edef68